debsig-verify (0.17) UNRELEASED; urgency=medium

  * Spelling fixes. Thanks to Josh Soref <jsoref@gmail.com>.

 -- Guillem Jover <guillem@debian.org>  Thu, 09 Mar 2017 03:55:44 +0100

debsig-verify (0.16) unstable; urgency=medium

  * Wrap dependency fields in debian/control.
  * Add debsigs to Suggests.
  * Mark gnupg Build-Depends as <!nocheck>.
  * Adapt for libdpkg 1.18.11 ar API changes.
  * Enable more compilation warnings from configure.
  * Switch to a single git repository URL in README for browsing and cloning
    to fix previously broken cloning URL.

 -- Guillem Jover <guillem@debian.org>  Tue, 24 Jan 2017 02:10:20 +0100

debsig-verify (0.15) unstable; urgency=medium

  * Fix typo in error message, reported by lintian.
  * Fix typo in man page, reported by lintian.
  * Bump Standard-Version to 3.9.8 (no changes needed).
  * Use https for debsig policy DTD.
  * Fix coding style.
  * Switch to the dpkg makefile fragments in debian/rules.
  * Enable all hardening flags.
  * Switch to use the new libdpkg 1.18.8 ar API.
  * Fix parsing of GnuPG 2.x --list-packets output.
  * Move debian/copyright paragraph referencing GPL-2 file to a Comment field.
  * Make configure.ac a dependency of the configure target in debian/rules.
  * Fix test suite with GnuPG 2.x.

 -- Guillem Jover <guillem@debian.org>  Thu, 14 Jul 2016 00:45:33 +0200

debsig-verify (0.14) unstable; urgency=low

  * Assume at least C89 and POSIX.1-2001.
  * Fix man page formatting.
  * Add references to debsigs(1) and gpg(1) to the man page.
  * Add missing man page .TH fields.
  * Use https instead of git or http in URLs.
  * Add new test case covering key to name id mapping.
  * Switch to use more of libdpkg instead of ad-hoc code:
    - Use path_make_temp_template().
    - Switch from popen() to subproc_fork() and execlp(), to avoid shell
      invocation and unsafe argument passing.
    - Use the command module to invoke GnuPG instead of execlp().