@@ -45,7 +45,7 @@ AC_PROG_MKDIR_P
 AM_MISSING_PROG([AUTOM4TE], [autom4te]) dnl Needed by autotest
 
 # Checks for libraries.
-AC_CHECK_LIB([xmlparse], [XML_ParserCreate])
+AC_CHECK_LIB([expat], [XML_ParserCreate])
 PKG_CHECK_MODULES([LIBDPKG], [libdpkg >= 1.18.8])
 
 # Checks for header files.
