@@ -9,7 +9,7 @@ Build-Depends:
  debhelper (>= 9),
  pkg-config,
  libdpkg-dev (>= 1.18.11),
- libxmltok1-dev,
+ libexpat1-dev,
  gnupg <!nocheck>,
 Standards-Version: 3.9.8
 
